# quantrust

./: .gitignore  OPTIMIZATION_TODO.md  PROGRESS.md  README.md  daily-progress.sh  docker-compose.yml  skills-lock.json  stock_prediction_prompt.md
.claude/: CLAUDE.md  settings.local.json
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  main.rs  sim.rs
backend/src/api/: global_routes.rs  mod.rs  portfolio_routes.rs  report_routes.rs  routes.rs  timing_routes.rs
backend/src/data/: cls_client.rs  eastmoney.rs  global_market.rs  group_portfolio.rs  mod.rs  news.rs  notices.rs  provider.rs  wscn_client.rs
backend/src/db/: autonomous_trading.rs  comments.rs  mod.rs  postgres_comments.rs
backend/src/models/: alert.rs  intraday.rs  mod.rs  portfolio.rs  screener.rs  stock.rs  strategy.rs  strategy_config.rs  timing.rs
backend/src/services/: after_hours_monitor.rs  agent_core.rs  agent_execution.rs  agent_memory.rs  agent_perception.rs  agent_reasoning.rs  ai_pattern.rs  anomaly.rs  anomaly_predict.rs  auto_research.rs  autonomous_trader.rs  backtest.rs  big_order_monitor.rs  capital_flow.rs  capital_participation.rs  comment_collector.rs  consecutive_limit.rs  financial.rs  hot_stocks.rs  indicators.rs  market_prediction.rs  market_strength.rs  mod.rs  momentum.rs  news.rs  news_analyzer.rs  news_impact.rs  notification.rs  portfolio_service.rs  python_backtest.rs  quant_hunter.rs  recommend.rs  report_generator.rs  risk.rs  scanner.rs  screener.rs  strategy_executor.rs  strategy_instances.rs  strategy_trading.rs  theme_analysis.rs  (+4 more)
backend/src/ws/: mod.rs
(+110 files in other folders)
